[metadata]
name = my-awesome-vumc-package
version = 0.0.1
author = Michael Schmidt
author_email = Michael.Schmidt@VUMC.org
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://no.url
project_urls =
    Bug Tracker = https://no.url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = example
packages = find:
python_requires = >=3.6

[options.packages.find]
where = example
